--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
+    "joi": "^14.0.3",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.8"
   }
 }
