--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "compile:sass:homePage": "node-sass --watch src/sass/HomePage.scss src/pages/home/HomePage.css",
-    "compile:sass:loginPage": "node-sass --watch src/sass/LoginPage.scss src/pages/login/LoginPage.css"
+    "compile:sass:loginPage": "node-sass --watch src/sass/LoginPage.scss src/pages/login/LoginPage.css",
+    "compile:sass:signupPage": "node-sass --watch src/sass/SignupPage.scss src/pages/signup/SignupPage.css"
   },
   "eslintConfig": {
     "extends": "react-app"
