--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "concurrently": "^4.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
@@ -20,7 +21,8 @@
     "eject": "react-scripts eject",
     "compile:sass:homePage": "node-sass --watch src/sass/HomePage.scss src/pages/home/HomePage.css",
     "compile:sass:loginPage": "node-sass --watch src/sass/LoginPage.scss src/pages/login/LoginPage.css",
-    "compile:sass:signupPage": "node-sass --watch src/sass/SignupPage.scss src/pages/signup/SignupPage.css"
+    "compile:sass:signupPage": "node-sass --watch src/sass/SignupPage.scss src/pages/signup/SignupPage.css",
+    "dev": "concurrently --kill-others \"nodemon src/backend/server.js\" \"npm run compile:sass:loginPage\" \"npm run compile:sass:homePage\" \"npm run compile:sass:signupPage\" "
   },
   "eslintConfig": {
     "extends": "react-app"
