--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -12,12 +12,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
-    "cookie-parser": "^1.4.3",
-    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "joi": "^14.0.4",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.11",
-    "mongoose": "^5.3.10"
+    "mongoose": "^5.3.10",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
