--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "compile:sass:homePage": "node-sass --watch src/sass/HomePage.scss src/pages/home/HomePage.css",
     "compile:sass:loginPage": "node-sass --watch src/sass/LoginPage.scss src/pages/login/LoginPage.css",
     "compile:sass:signupPage": "node-sass --watch src/sass/SignupPage.scss src/pages/signup/SignupPage.css",
-    "dev": "concurrently --kill-others \"nodemon src/backend/server.js\" \"npm run compile:sass:loginPage\" \"npm run compile:sass:homePage\" \"npm run compile:sass:signupPage\" "
+    "compile:sass:userPage": "node-sass --watch src/sass/UserPage.scss src/pages/user/UserPage.css",
+    "dev": "concurrently --kill-others \"nodemon src/backend/server.js\" \"npm run compile:sass:userPage\" \"npm run compile:sass:loginPage\" \"npm run compile:sass:homePage\" \"npm run compile:sass:signupPage\" "
   },
   "eslintConfig": {
     "extends": "react-app"
