--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "compression": "^1.7.3",
     "concurrently": "^4.0.1",
+    "helmet": "^3.15.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
@@ -24,6 +26,9 @@
     "compile:sass:signupPage": "node-sass --watch src/sass/SignupPage.scss src/pages/signup/SignupPage.css",
     "compile:sass:userPage": "node-sass --watch src/sass/UserPage.scss src/pages/user/UserPage.css",
     "dev": "concurrently --kill-others \"nodemon src/backend/server.js\" \"npm run compile:sass:userPage\" \"npm run compile:sass:loginPage\" \"npm run compile:sass:homePage\" \"npm run compile:sass:signupPage\" "
+  },
+  "engines": {
+    "node": "8.12.0"
   },
   "eslintConfig": {
     "extends": "react-app"
